Removed debugging code

--- a/ChartMaker.html
+++ b/ChartMaker.html
@@ -57,16 +57,17 @@ var lat2 = document.getElementById("lat2")
 var lon2 = document.getElementById("lon2")
 var pos = document.getElementById("pos")
 
-x1.value = '73'
-y1.value = '261'
-x2.value = '400'
-y2.value = '646'
-lat1.value = '58.59885328138695'
-lon1.value = '-4.01859489313778'
-lat2.value = '57.610230440664076'
-lon2.value = '-1.8165823722012504'
-canvas.width = '829'
-canvas.height = '566'
+// Paste debugging here:
+//x1.value = '73'
+//y1.value = '261'
+//x2.value = '400'
+//y2.value = '646'
+//lat1.value = '58.59885328138695'
+//lon1.value = '-4.01859489313778'
+//lat2.value = '57.610230440664076'
+//lon2.value = '-1.8165823722012504'
+//canvas.width = '829'
+//canvas.height = '566'
 
 var latFactor = 0
 var lonFactor = 0
